Refractoring rentalSerivce